# myconnect4

./: todo.txt
myconnect4-client/: Cargo.toml  build.rs
myconnect4-client/src/: game.rs  main.rs
myconnect4-server/: .gitignore  Cargo.toml
myconnect4-server/src/: game.rs  main.rs  minimax.rs  repo.rs
myconnect4-server/src/actor/: bot.rs  botmanager.rs  connector.rs  controller.rs  game.rs  main_controller.rs  match_making.rs  matchmaking.rs  mod.rs  service.rs
myconnect4-server/src/tests/: game.rs  minimax.rs  mod.rs
myconnect4-server/src/tests/actor/: controller.rs  game.rs  matchmaking.rs  mod.rs
shared/proto/: myconnect4.proto
