[package]
name = "myconnect4-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
prost = "0.12.2"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["full", "io-util"] }
tokio-stream = "0.1.14"
tonic = { version = "0.10.2", features = ["prost"] }

[build-dependencies]
tonic-build = { version = "0.10.2" }
