[package]
name = "myconnect4-server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
#strip = "symbols"
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
chrono = "0.4.31"
either = "1.9.0"
env_logger = "0.10.1"
log = "0.4.20"
prost = "0.12.2"
rand = "0.8.5"
rayon = "1.8.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.10.2", features = ["prost"] }

[build-dependencies]
tonic-build = { version = "0.10.2" }
